# wtc3_logger

./: LICENSE  README.md  agent.md  pyproject.toml
logs/: 20251002_155253_PMNN4491D_WTC3206.tsv  20251002_161236_PMNN4491D_WTC3206.tsv  20251002_161801_PMNN4807A_WTC3206.tsv  20251006_084830_PMNN4491D_WTC3206.tsv
scripts/: build_release.py  pyinstaller_entry.py
tests/: conftest.py  test_acquisition.py  test_databus.py  test_main_window.py  test_parser.py  test_pdf_report.py  test_status.py
wtc3_logger/: __init__.py  __main__.py  acquisition.py  app.py  config.py  databus.py  export_utils.py  parser.py  preferences.py  sample.txt  serial_reader.py  status.py
wtc3_logger/ui/: __init__.py  colors.py  config_dialog.py  main_window.py  pdf_report.py
